--- a/res/tex/formula.tex
+++ b/res/tex/formula.tex
@@ -1,7 +1,7 @@
 %cost_function
 $$
 cost = 
-    \sum_{i,j\neq i,p,q \neq q_L,w} {L^{ij}_{pq} \cdot R^{w}_{pq} \cdot(C_{i}+C_{j} \cdot \delta_{sel}(q))} + 
+    \sum_{i,j\neq i,p,q \neq q_L,w} {L^{ij}_{pq} \cdot (R^{w}_{pq} \cdot C_{i} + R^{w}_{pq+1} \cdot C_{j} \cdot \delta_{sel}(q+1))} + 
     \sum_{i,j \neq i,p,q \neq q_L,w} L^{ij}_{pq} \cdot B_p \cdot  C_{ij}
 $$
 
